# sqlx2db

./: .env  Cargo.toml  README.md
src/: main.rs
