[package]
name = "sqlx2db"
version = "0.1.0"
authors = ["Daniel <qiuzhanghua@icloud.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
chrono = "0.4"
tokio = {version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
async-native-tls = { version = "0.3", default-features = false, features = [ "runtime-tokio" ] }
mysql = {version = "18"}
postgres = {version = "0.17"}
postgres-shared = {version = "0.4"}
sqlx-core = {version = "0.3", default-features = false, features = [ "runtime-tokio" ]}

[dependencies.sqlx]
version = "0.3"
default-features = false
features = [ "runtime-tokio", "macros", "postgres", "mysql", "sqlite",  "uuid", "chrono", "bigdecimal", "json", "ipnetwork", "tls"]
