[package]
name = "sqlx2db"
version = "0.2.0"
authors = ["Daniel <qiuzhanghua@icloud.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
chrono = "0.4"
tokio = {version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
mysql = {version = "20"}
postgres = {version = "0.19"}
postgres-shared = {version = "0.4"}

[dependencies.sqlx]
version = "0.4"
default-features = false
features = [ "runtime-async-std-native-tls", "macros", "postgres", "mysql", "mssql", "sqlite",  "uuid", "chrono", "bigdecimal", "json", "ipnetwork", "tls"]
